RESOLVED FIXED277259
Fix some typing issues in WasmOMGIRGenerator32_64.cpp
https://bugs.webkit.org/show_bug.cgi?id=277259
Summary Fix some typing issues in WasmOMGIRGenerator32_64.cpp
Angelos Oikonomopoulos
Reported 2024-07-29 06:28:26 PDT
Remove some assumptions about Int64 that should really be pointerType().
Attachments
Angelos Oikonomopoulos
Comment 1 2024-07-29 06:32:41 PDT
EWS
Comment 2 2024-07-29 14:09:40 PDT
Committed 281522@main (1bfe7d142ce9): <https://commits.webkit.org/281522@main> Reviewed commits have been landed. Closing PR #31391 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-29 14:10:15 PDT
Note You need to log in before you can comment on or make changes to this bug.